[gd_scene load_steps=2 format=3 uid="uid://j640ftkccyin"]

[ext_resource type="Script" path="res://scripts/experiments/AnimationTester.gd" id="1_script"]

[node name="AnimationTester" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PreviewContainer" type="VBoxContainer" parent="MainContainer/PreviewPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/PreviewPanel/PreviewContainer"]
layout_mode = 2
text = "Animation Preview"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/PreviewPanel/PreviewContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterLayers" type="Node2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer"]
position = Vector2(300, 300)
scale = Vector2(3, 3)

[node name="BaseSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="OutfitSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="CloakSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="FaceSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="HairSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="HatSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="ToolASprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="ToolBSprite" type="Sprite2D" parent="MainContainer/PreviewPanel/PreviewContainer/CenterContainer/CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="AnimationInfo" type="HBoxContainer" parent="MainContainer/PreviewPanel/PreviewContainer"]
layout_mode = 2

[node name="AnimLabel" type="Label" parent="MainContainer/PreviewPanel/PreviewContainer/AnimationInfo"]
layout_mode = 2
text = "Animation: Walk"

[node name="FrameLabel" type="Label" parent="MainContainer/PreviewPanel/PreviewContainer/AnimationInfo"]
layout_mode = 2
text = "Frame: 0"

[node name="DirectionLabel" type="Label" parent="MainContainer/PreviewPanel/PreviewContainer/AnimationInfo"]
layout_mode = 2
text = "Direction: South"

[node name="ControlsPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlsContainer" type="VBoxContainer" parent="MainContainer/ControlsPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2
text = "Animation Tester"
horizontal_alignment = 1

[node name="CharacterInfo" type="VBoxContainer" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MainContainer/ControlsPanel/ControlsContainer/CharacterInfo"]
layout_mode = 2
text = "Selected Character:"

[node name="VariantsLabel" type="Label" parent="MainContainer/ControlsPanel/ControlsContainer/CharacterInfo"]
layout_mode = 2
text = "Variants will appear here"
autowrap_mode = 2

[node name="Separator1" type="HSeparator" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="AnimationSelect" type="VBoxContainer" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect"]
layout_mode = 2
text = "Select Animation"

[node name="WalkBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect"]
layout_mode = 2
text = "Walk (p1)"

[node name="RunBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect"]
layout_mode = 2
text = "Run (p1)"

[node name="JumpBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect"]
layout_mode = 2
text = "Jump (p1)"

[node name="PushBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect"]
layout_mode = 2
text = "Push (p1)"

[node name="PullBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect"]
layout_mode = 2
text = "Pull (p1)"

[node name="Separator2" type="HSeparator" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="DirectionControls" type="VBoxContainer" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="DirectionLabel" type="Label" parent="MainContainer/ControlsPanel/ControlsContainer/DirectionControls"]
layout_mode = 2
text = "Direction"

[node name="DirectionButtons" type="HBoxContainer" parent="MainContainer/ControlsPanel/ControlsContainer/DirectionControls"]
layout_mode = 2

[node name="SouthBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "South"

[node name="WestBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "West"

[node name="EastBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "East"

[node name="NorthBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "North"

[node name="Separator3" type="HSeparator" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="MainContainer/ControlsPanel/ControlsContainer"]
layout_mode = 2
text = "Back to Character Creator"

[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect/WalkBtn" to="." method="_on_animation_selected" binds= ["walk"]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect/RunBtn" to="." method="_on_animation_selected" binds= ["run"]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect/JumpBtn" to="." method="_on_animation_selected" binds= ["jump"]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect/PushBtn" to="." method="_on_animation_selected" binds= ["push"]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/AnimationSelect/PullBtn" to="." method="_on_animation_selected" binds= ["pull"]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons/SouthBtn" to="." method="_on_direction_changed" binds= [0]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons/WestBtn" to="." method="_on_direction_changed" binds= [3]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons/EastBtn" to="." method="_on_direction_changed" binds= [2]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/DirectionControls/DirectionButtons/NorthBtn" to="." method="_on_direction_changed" binds= [1]]
[connection signal="pressed" from="MainContainer/ControlsPanel/ControlsContainer/BackBtn" to="." method="_on_back_pressed"]
